--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "ng-confirmation-modal": "^3.0.0",
+    "ngx-csv": "^0.3.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "simple-ng-loader": "^2.0.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.10",
     "@angular/cli": "~13.3.10",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
