--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "auth-guard": "^1.0.12",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
