--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@costlydeveloper/ngx-awesome-popup": "^3.2.0",
     "auth-guard": "^1.0.12",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -28,10 +29,16 @@
     "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "ng-confirmation-modal": "^3.0.0",
+    "ng6-toastr-notifications": "^1.0.4",
+    "ngx-confirm-box": "^0.0.3",
     "ngx-csv": "^0.3.2",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^14.3.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "simple-ng-loader": "^2.0.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
